CMAKE_MINIMUM_REQUIRED(VERSION 3.0.2)

PROJECT(various)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

FIND_PACKAGE(Eigen3)
FIND_PACKAGE(Threads)

ADD_DEFINITIONS(
  -DAPL=0
  -DIBM=0
  -DLIN=1
  )

# Uncomment the following lines to compile for 64 bit architectures
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -fms-extensions")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fms-extensions")


SET(LIBPREFIX "${CMAKE_STATIC_LIBRARY_PREFIX}")
SET(LIBSUFFIX "${CMAKE_STATIC_LIBRARY_SUFFIX}")



SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)


ADD_SUBDIRECTORY(Number01_2)

ADD_SUBDIRECTORY(Number01_3)

ADD_SUBDIRECTORY(Number01_4)

ADD_SUBDIRECTORY(Number01_5)

ADD_SUBDIRECTORY(Number01_6)

ADD_SUBDIRECTORY(Number01_7)

ADD_SUBDIRECTORY(Number02_1)

ADD_SUBDIRECTORY(Number04_1)


